// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav matches snapshot 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-k3os1w-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-8vsink-MuiToolbar-root"
    >
      <button
        aria-label="inkling-logo"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeMedium css-1d6w9lk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <img
          alt="Inkling Logo"
          height="auto"
          src="inkling.png"
          width="100"
        />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <a
        class=""
        href="/journal"
        style="text-decoration: none; margin: 0px 1rem;"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1kgxqm0-MuiTypography-root"
        >
          Journal
        </h6>
      </a>
      <a
        class=""
        href="/profile"
        style="text-decoration: none; margin: 0px 1rem;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
        >
          Testfirst
        </p>
      </a>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1b65cwv-MuiTypography-root"
      >
        Log Out
      </p>
    </div>
  </header>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-k3os1w-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-8vsink-MuiToolbar-root"
    >
      <button
        aria-label="inkling-logo"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeMedium css-1d6w9lk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <img
          alt="Inkling Logo"
          height="auto"
          src="inkling.png"
          width="100"
        />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <a
        class=""
        href="/login"
        style="text-decoration: none; margin: 0px 1rem;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-1y942vo-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Login
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class=""
        href="/signup"
        style="text-decoration: none; margin: 0px 1rem;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit css-1y942vo-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Signup
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </a>
    </div>
  </header>
</DocumentFragment>
`;
